# case-zero

./: README.md  docker-compose.yml
client/: .dockerignore  Dockerfile  middleware.ts  package-lock.json  package.json  proxy.ts
client/app/: layout.tsx  page.tsx
client/app/landing/: page.tsx
client/components/: BgmPlayer.tsx  GameModals.tsx  TacticalHUD.tsx  Terminal.tsx
server/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
server/app/: agent.py  database.py  main.py  tools.py
